--- a/styles/main.less
+++ b/styles/main.less
@@ -1,15 +1,7 @@
-input[type="checkbox"]{
-	margin: 0px;
-}
+
 
 .wrapper{
 	margin: 30px auto;
-	// background: #eee;
-}
-td{
-	// white-space: nowrap;
-	// padding: 3px;
-	padding: 0 12px;
 }
 
 /** ---------- Base ---------- **/
@@ -49,38 +41,47 @@ td{
 	color: #444;
 	text-align: right;
 	border: 1px solid #eaeaea;
-	table{
+
+	table td{
+		padding: 0 12px;
 		// -moz-box-sizing: border-box;
 		// -webkit-box-sizing:border-box;
 		// box-sizing: border-box;
 	}
+
 	&Corner{
 		background: #f8f8f8;
 		&Hook{
 			line-height: 40px;
 			text-align: center;
 			td{
+				white-space: nowrap;
 				border-right: 1px solid #f8f8f8;
 				border-bottom: 1px solid #c8cdcc;
 			}
 		}
 		&Amount{
+			overflow: hidden;
+			position: relative;
+			z-index: 1;
 			text-align: center;
-			padding: 0px;
-			border-bottom: 1px solid #eaeaea;
-			border-right: 1px solid #eaeaea;
+			td{
+				border-bottom: 1px solid #eaeaea;
+				border-right: 1px solid #eaeaea;
+			}
 		}
 	}
 	&Header{
 		overflow:hidden;
 		background: #f8f8f8;
 		table{
-			// min-width: 100%;
+			min-width: 100%;
 		}
 		&Title{
 			line-height: 40px;
 			text-align: center;
 			td{
+				white-space: nowrap;
 				border-right: 1px solid #f8f8f8;
 				border-bottom: 1px solid #c8cdcc;
 			}
@@ -90,11 +91,9 @@ td{
 				td{
 					border: solid #EAEAEA;
 					border-width: 0 1px 1px 0;
-					// min-width: 100px;
 				}
 		}
 	}
-
 	&Sidebar{
 		overflow: hidden;
 		position: relative;
@@ -109,16 +108,20 @@ td{
 			border: solid #EAEAEA;
 			border-width: 0 1px 1px 0;
 		}
+		// 操作图标
+		&Menu{
+			background: url('img/menu.png') 0 0 no-repeat;
+			padding: 7px;
+			display: inline-block;
+
+		}
 	}
-		// .act td{
-		// 	border-right: 1px solid #888;
-		// 	bor
-		// }
+
 	&Content{
-		overflow: scroll;
+		overflow: auto;
 		position:relative;
 		table{
-			// min-width: 100%;
+			min-width: 100%;
 		}
 		tr{
 			line-height: 40px;
@@ -129,12 +132,26 @@ td{
 		td{
 			border: solid #EAEAEA;
 			border-width: 0 1px 1px 0;
-			// min-width: 100px;
-
 		}
 	}
-		.act{
-			box-shadow: 1px 0px 3px #ddd;
-			// border-right: 1px solid #888;
-		}
+	.gridLayoutLeft{
+		overflow: hidden;
+		position: relative;
+		z-index: 2;
+	}
+	.gridLayoutLeft:before {
+		// box-shadow: 7px 0 18px -12px inset;
+		box-shadow: 7px 0 18px -12px inset;
+		content: " ";
+		height: 100%;
+		right: -15px;
+		position: absolute;
+		top: 0;
+		width: 15px;
+	}
+
+	.act{
+		overflow: visible;
+	}
+
 }
