--- a/styles/main.less
+++ b/styles/main.less
@@ -44,6 +44,8 @@
 
 	table td{
 		padding: 0 12px;
+		overflow: hidden;
+
 		// -moz-box-sizing: border-box;
 		// -webkit-box-sizing:border-box;
 		// box-sizing: border-box;
