添加表头右边距值，为了与出现滚动条时保持一致； 优化计算方式

--- a/styles/main.css
+++ b/styles/main.css
@@ -135,6 +135,9 @@
   top: 0;
   width: 15px;
 }
+.grid .gridLayoutRight .scrollerPadding {
+  padding-right: 17px;
+}
 .grid .shadow {
   overflow: visible;
 }
