--- a/styles/main.less
+++ b/styles/main.less
@@ -151,6 +151,11 @@
 		top: 0;
 		width: 15px;
 	}
+	.gridLayoutRight{
+		.scrollerPadding{
+			padding-right: 17px;
+		}
+	}
 
 	.shadow{
 		overflow: visible;
